--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,10 @@
               "apps/book-store/src/favicon.ico",
               "apps/book-store/src/assets"
             ],
-            "styles": ["apps/book-store/src/styles.scss"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "apps/book-store/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -147,6 +150,131 @@
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/book-store-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    },
+    "material": {
+      "projectType": "library",
+      "root": "libs/material",
+      "sourceRoot": "libs/material/src",
+      "prefix": "kortext",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/material"],
+          "options": {
+            "jestConfig": "libs/material/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/material/src/**/*.ts",
+              "libs/material/src/**/*.html"
+            ]
+          }
+        }
+      }
+    },
+    "api": {
+      "projectType": "library",
+      "root": "libs/api",
+      "sourceRoot": "libs/api/src",
+      "prefix": "kortext",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/api"],
+          "options": {
+            "jestConfig": "libs/api/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/api/src/**/*.ts",
+              "libs/api/src/**/*.html"
+            ]
+          }
+        }
+      }
+    },
+    "book-store-books": {
+      "projectType": "library",
+      "root": "libs/book-store/books",
+      "sourceRoot": "libs/book-store/books/src",
+      "prefix": "kortext",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/book-store/books"],
+          "options": {
+            "jestConfig": "libs/book-store/books/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/book-store/books/src/**/*.ts",
+              "libs/book-store/books/src/**/*.html"
+            ]
+          }
+        }
+      }
+    },
+    "book-store-state": {
+      "projectType": "library",
+      "root": "libs/book-store/state",
+      "sourceRoot": "libs/book-store/state/src",
+      "prefix": "kortext",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/book-store/state"],
+          "options": {
+            "jestConfig": "libs/book-store/state/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/book-store/state/src/**/*.ts",
+              "libs/book-store/state/src/**/*.html"
+            ]
+          }
+        }
+      }
+    },
+    "book-store-bookmarks": {
+      "projectType": "library",
+      "root": "libs/book-store/bookmarks",
+      "sourceRoot": "libs/book-store/bookmarks/src",
+      "prefix": "kortext",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/book-store/bookmarks"],
+          "options": {
+            "jestConfig": "libs/book-store/bookmarks/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/book-store/bookmarks/src/**/*.ts",
+              "libs/book-store/bookmarks/src/**/*.html"
+            ]
           }
         }
       }
