--- a/package.json
+++ b/package.json
@@ -29,14 +29,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.0",
+    "@angular/animations": "^12.0.3",
+    "@angular/cdk": "^12.0.2",
     "@angular/common": "^12.0.0",
     "@angular/compiler": "^12.0.0",
     "@angular/core": "^12.0.0",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "^12.0.0",
+    "@angular/material": "^12.0.2",
     "@angular/platform-browser": "^12.0.0",
     "@angular/platform-browser-dynamic": "^12.0.0",
     "@angular/router": "^12.0.0",
+    "@datorama/akita": "^6.1.3",
+    "@datorama/akita-ngdevtools": "^6.0.0",
     "@nrwl/angular": "12.3.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
