--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,15 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@kortext/material": ["libs/material/src/index.ts"],
+      "@kortext/api": ["libs/api/src/index.ts"],
+      "@kortext/book-store/books": ["libs/book-store/books/src/index.ts"],
+      "@kortext/book-store/state": ["libs/book-store/state/src/index.ts"],
+      "@kortext/book-store/bookmarks": [
+        "libs/book-store/bookmarks/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
